syntax = "proto3";


message SignupPayload {
   string email = 1;
}



message FinishSignUpPayload {
   string first_name = 1;
   string last_name = 2;
   string email = 3;
   string date_of_birth = 4;
   string password = 5;
}

message VerifyAccountPayload {
   string code = 1;
   string phone_number = 2;
}

message Response{
   string message = 1;
   int32 statusCode = 2;
   string data = 3;
}

service AuthServices  {
   rpc Signup(SignupPayload) returns (Response){}
   rpc VerifyAccount(VerifyAccountPayload) returns (Response){}
   rpc FinishUpAccount(FinishSignUpPayload) returns (Response){}
}
